--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_field_008.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_field_008.tmpl
@@ -4,7 +4,7 @@
 </head>
 <body>
 <form name="f_pop" onSubmit="javascript:report()">
-<input type="hidden" name="plugin_name" value="marc21_field_008.tmpl">
+<input type="hidden" name="plugin_name" value="marc21_field_008.pl">
 <table>
 	<tr>
 		<td>1-5 Date entered on file</td>
