--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_leader.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_leader.tmpl
@@ -4,7 +4,7 @@
 </head>
 <body>
 <form name="f_pop" onSubmit="javascript:report()">
-<input type="hidden" name="plugin_name" value="marc21_leader.tmpl">
+<input type="hidden" name="plugin_name" value="marc21_leader.pl">
 <table>
 	<tr>
 		<td>1-4 Record size</td>
