#1449: Installer improved to add a zebra/Nozebra screen
+ some minor changes in html

Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/installer/step2.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/installer/step2.tmpl
@@ -1,8 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" --><title>Koha &rsaquo; Web Installer &rsaquo; Step 2</title>
 <!-- TMPL_INCLUDE NAME="installer-doc-head-close.inc" -->
 <div>
-<h1 id="logo"><img alt="Koha" src="/intranet-tmpl/prog/img/koha.org-logo.gif" /></h1>
-<h1>Koha &rsaquo; Web Installer &rsaquo; Step 2</h1>
+<h1 id="logo"><img alt="Koha" src="/intranet-tmpl/prog/img/koha.org-logo.gif" /> Web Installer &rsaquo; Step 2</h1>
 <h2 align="center">Database settings:</h2>
 <ul>
 <li><em>database name : </em><!--TMPL_VAR NAME="dbname"--></li>
