--- a/koha-tmpl/intranet-tmpl/prog/en/modules/installer/step1.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/installer/step1.tmpl
@@ -2,8 +2,7 @@
 <title>Koha &rsaquo; Web Installer &rsaquo; Step 1</title>
 <!-- TMPL_INCLUDE NAME="installer-doc-head-close.inc" -->
 <div>
-<h1 id="logo"><img alt="Koha" src="/intranet-tmpl/prog/img/koha.org-logo.gif" /></h1>
-<h1>Koha &rsaquo; Web Installer &rsaquo; Step 1</h1>
+<h1 id="logo"><img alt="Koha" src="/intranet-tmpl/prog/img/koha.org-logo.gif" /> Web Installer &rsaquo; Step 1</h1>
 <!--TMPL_UNLESS Name="language"-->
 <p>You are about to install Koha.</p>
 
