--- a/koha-tmpl/intranet-tmpl/prog/en/modules/installer/step3.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/installer/step3.tmpl
@@ -2,148 +2,177 @@
 <!--TMPL_IF Name="finish"--><meta http-equiv="refresh" content="10; url=/cgi-bin/koha/mainpage.pl"><!--/TMPL_IF-->
 <!-- TMPL_INCLUDE NAME="installer-doc-head-close.inc" -->
 <div>
-<h1 id="logo"><img alt="Koha" src="/intranet-tmpl/prog/img/koha.org-logo.gif" /></h1>
-<h1>Koha &rsaquo; Web Installer &rsaquo; Step 3</h1>
+<h1 id="logo"><img alt="Koha" src="/intranet-tmpl/prog/img/koha.org-logo.gif" /> Web Installer &rsaquo; Step 3</h1>
+
 <!--TMPL_IF NAME="selectframeworks"-->
-<script language="JavaScript">
-<!--
-
-var sURL = unescape(window.location.pathname);
-
-function doLoad()
-{
-    // the timeout value should be the same as in the "refresh" meta-tag
-    setTimeout( "refresh()", 2*1000 );
-}
-
-function refresh(value)
-{
-    //  This version of the refresh function will cause a new
-    //  entry in the visitor's history.  It is provided for
-    //  those browsers that only support JavaScript 1.0.
-    //
-    sURL=sURL+'?step=3&op=selectframeworks&fwklanguage='+value;
-    window.location.href = sURL;
-}
-
-//-->
-</script>
-
-<script language="JavaScript1.1">
-<!--
-function refresh(value)
-{
-    //  This version does NOT cause an entry in the browser's
-    //  page view history.  Most browsers will always retrieve
-    //  the document from the web-server whether it is already
-    //  in the browsers page-cache or not.
-    //  
-    sURL=sURL+'?step=3&op=selectframeworks&fwklanguage='+value;
-    window.location.replace( sURL );
-}
-//-->
-</script>
-
-<script language="JavaScript1.2">
-<!--
-function refresh(value)
-{
-    //  This version of the refresh function will be invoked
-    //  for browsers that support JavaScript version 1.2
-    //
+    <script language="JavaScript">
+    <!--
     
-    //  The argument to the location.reload function determines
-    //  if the browser should retrieve the document from the
-    //  web-server.  In our example all we need to do is cause
-    //  the JavaScript block in the document body to be
-    //  re-evaluated.  If we needed to pull the document from
-    //  the web-server again (such as where the document contents
-    //  change dynamically) we would pass the argument as 'true'.
-    //  
-    sURL=sURL+'?step=3&op=selectframeworks&fwklanguage='+value;
-    window.location.replace( sURL );
-}
-//-->
-</script>
-</head>
-<body>
-<script language="JavaScript">
-function Hide(link) {
-	subfield = document.getElementById('bloc'+link);
-    var initstyle=subfield.style.display;
-	if (initstyle == 'block') subfield.style.display = 'none' ;
-	if (initstyle == 'none') subfield.style.display = 'block' ;
-}
-</script>
+    var sURL = unescape(window.location.pathname);
+    
+    function doLoad()
+    {
+        // the timeout value should be the same as in the "refresh" meta-tag
+        setTimeout( "refresh()", 2*1000 );
+    }
+    
+    function refresh(value)
+    {
+        //  This version of the refresh function will cause a new
+        //  entry in the visitor's history.  It is provided for
+        //  those browsers that only support JavaScript 1.0.
+        //
+        sURL=sURL+'?step=3&op=selectframeworks&fwklanguage='+value;
+        window.location.href = sURL;
+    }
+    
+    //-->
+    </script>
+    
+    <script language="JavaScript1.1">
+    <!--
+    function refresh(value)
+    {
+        //  This version does NOT cause an entry in the browser's
+        //  page view history.  Most browsers will always retrieve
+        //  the document from the web-server whether it is already
+        //  in the browsers page-cache or not.
+        //  
+        sURL=sURL+'?step=3&op=selectframeworks&fwklanguage='+value;
+        window.location.replace( sURL );
+    }
+    //-->
+    </script>
+    
+    <script language="JavaScript1.2">
+    <!--
+    function refresh(value)
+    {
+        //  This version of the refresh function will be invoked
+        //  for browsers that support JavaScript version 1.2
+        //
+        
+        //  The argument to the location.reload function determines
+        //  if the browser should retrieve the document from the
+        //  web-server.  In our example all we need to do is cause
+        //  the JavaScript block in the document body to be
+        //  re-evaluated.  If we needed to pull the document from
+        //  the web-server again (such as where the document contents
+        //  change dynamically) we would pass the argument as 'true'.
+        //  
+        sURL=sURL+'?step=3&op=selectframeworks&fwklanguage='+value;
+        window.location.replace( sURL );
+    }
+    //-->
+    </script>
+    </head>
+    <body>
+    <script language="JavaScript">
+    function Hide(link) {
+            subfield = document.getElementById('bloc'+link);
+        var initstyle=subfield.style.display;
+            if (initstyle == 'block') subfield.style.display = 'none' ;
+            if (initstyle == 'none') subfield.style.display = 'block' ;
+    }
+    </script>
 <!--/TMPL_IF-->
 <!--TMPL_IF Name="finish"-->
-  <h1>Congratulations, Installation complete</h1>
-  <p>If this page does not redirect in 5 seconds, click <a href="/">here</a>.</p> 
+    <h1>Congratulations, Installation complete</h1>
+    <p>If this page does not redirect in 5 seconds, click <a href="/">here</a>.</p> 
 <!--/TMPL_IF-->
 
 <!--TMPL_IF Name="selectframeworks"-->
-  <h2 align="center">Selecting Default Settings</h2>
-  <form name="frameworkselection" method="post" action="install.pl">
-  <input type="hidden" name="step" value="3" />
-  <input type="hidden" name="op" value="addframeworks" />
-  <p>Each language has a set of default settings that cover a wide range of configuration options. Please select a language from the dropdown or use the default lanaguage already selected.</p>
-
-  <p><select name="fwklanguage" onchange="javascript:refresh(this.value)">
-  <!--TMPL_LOOP Name="languagelist" -->
-  <!--TMPL_IF Name="checked"--><option value="<!--TMPL_VAR Name="dirname"-->" selected="selected"><!--TMPL_VAR Name="languagedescription"--></option>
-  <!--TMPL_ELSE--><option value="<!--TMPL_VAR Name="dirname"-->"><!--TMPL_VAR Name="languagedescription"--></option>
-  <!--/TMPL_IF-->
-  <!--/TMPL_LOOP-->
-  </select>
-  </p>
-  <p>
-  <!--TMPL_LOOP Name="levelloop"-->
-  <div>
-  <h3><!--TMPL_VAR Name="label"--></h3>
-  <!--TMPL_LOOP Name="frameworks"-->
-    <div style="border:1px;">
-    <p>
-    <!--TMPL_IF Name="checked"--><input type="checkbox" name="framework" value="<!--TMPL_VAR Name="fwkfile"-->" checked="checked" />
-    <!--TMPl_ELSE--><input type="checkbox" name="framework" value="<!--TMPL_VAR Name="fwkfile"-->" />
+    <h2 align="center">Selecting Default Settings</h2>
+    <form name="frameworkselection" method="post" action="install.pl">
+    <input type="hidden" name="step" value="3" />
+    <input type="hidden" name="op" value="addframeworks" />
+    <p>Each language has a set of default settings that cover a wide range of configuration options. Please select a language from the dropdown or use the default lanaguage already selected.</p>
+    
+    <p><select name="fwklanguage" onchange="javascript:refresh(this.value)">
+    <!--TMPL_LOOP Name="languagelist" -->
+    <!--TMPL_IF Name="checked"--><option value="<!--TMPL_VAR Name="dirname"-->" selected="selected"><!--TMPL_VAR Name="languagedescription"--></option>
+    <!--TMPL_ELSE--><option value="<!--TMPL_VAR Name="dirname"-->"><!--TMPL_VAR Name="languagedescription"--></option>
     <!--/TMPL_IF-->
-    <!--TMPL_VAR Name="fwkdescription"-->
-    <em>(<!--TMPL_VAR Name="fwkname"-->)</em>
+    <!--/TMPL_LOOP-->
+    </select>
     </p>
+    <p>
+    <!--TMPL_LOOP Name="levelloop"-->
+    <div>
+    <h3><!--TMPL_VAR Name="label"--></h3>
+    <!--TMPL_LOOP Name="frameworks"-->
+        <table style="border:1px;vertical-align:top;">
+        <tr>
+        <td style="vertical-align:top;">
+            <!--TMPL_IF Name="checked"-->
+                <input type="checkbox" name="framework" value="<!--TMPL_VAR Name="fwkfile"-->" checked="checked" />
+            <!--TMPl_ELSE-->
+                <input type="checkbox" name="framework" value="<!--TMPL_VAR Name="fwkfile"-->" />
+            <!--/TMPL_IF-->
+        </td>
+        <td>
+            <!--TMPL_VAR Name="fwkdescription"-->
+            <em>(<!--TMPL_VAR Name="fwkname"-->)</em>
+        </td>
+        </table>
+    <!--/TMPL_LOOP-->
     </div>
-  <!--/TMPL_LOOP-->
-  </div>
-  </p>
-  <!--/TMPL_LOOP-->
-  <p>When you've made your selections, please click 'Import' below to begin the process. It may take a while to complete,
-  please be patient.</p>
-  <p><input type="submit" value="import" />
-  </p>
-  </form>
-  </p>
+    </p>
+    <!--/TMPL_LOOP-->
+    <p>When you've made your selections, please click 'Import' below to begin the process. It may take a while to complete,
+    please be patient.</p>
+    <p><input type="submit" value="import" />
+    </p>
+    </form>
+    </p>
 <!--/TMPL_IF-->
 
 
 <!--TMPL_IF Name="addframeworks"-->
-  <h2 align="center">Results of installation:</h2>
-  <p>Language :<!--TMPL_VAR Name="fwklanguage"--></p>
-  <!--TMPL_LOOP Name="list"-->
-  <h3><!--TMPL_VAR Name="level"--> data added</h3>
-  <p>
-  <ul>
-  <!--TMPL_LOOP Name="fwklist"-->
-    <li><!--TMPL_VAR Name="fwkname"--><!--TMPL_IF Name="error"--><br /><span class="error"><!--TMPL_VAR Name="error"--></span><!--/TMPL_IF--> </li>
-  <!--/TMPL_LOOP-->
-  </ul>
-  </p>
-  <!--/TMPL_LOOP-->
-  <p>Installation complete.<br />
-    <p>Click on Finish to complete and load the Koha Staff Interface.
-    <form name="finish">
-    <input type="hidden" name="step" value="3" />
-    <input type="hidden" name="op" value="finish" />
-    <input type="submit" value="Finish" /></form>
+    <!--TMPL_LOOP Name="list"-->
+    <h3><!--TMPL_VAR Name="level"--> data added</h3>
+    <ul>
+    <!--TMPL_LOOP Name="fwklist"-->
+        <li><!--TMPL_VAR Name="fwkname"--><!--TMPL_IF Name="error"--><br /><span class="error"><!--TMPL_VAR Name="error"--></span><!--/TMPL_IF--> </li>
+    <!--/TMPL_LOOP-->
+    </ul>
+    <!--/TMPL_LOOP-->
+    <h2>Zebra or Nozebra ?</h2>
+    <p>Koha comes in 2 flavours : Zebra and NoZebra. You will now decide the version you need</p>
+    <p>some directions to help you choose:</p>
+    <h3>Zebra version</h3>
+      <ul>
+        <li>is highly scalable (can support easily more than 300 000 items on a public library with an OPAC widely accessed on the web : see http://catalog.ccfls.org/cgi-bin/koha/opac-main.pl or http://www.mediathequeouestprovence.fr/)<li>
+        <li>provide a public (external) z3950 server</li>
+        <li>is complex to configure and administrate</li>
+    </ul>
+    <h3>NoZebra version</h3>
+        <ul>
+            <li>is available immediatly once Koha is installed</li>
+            <li>is probably not that speedy for catalogue with more than 100 000 items</li>
+            <li>does not provide a public (external) z3950 server</li>
+        </ul>
+    <p>Whatever you choose now, you can always change your mind and setup the other version.</p>
+    <p>Note that, if you choose "Zebra", you won't have a working koha, you must set up zebra first (catalogue search won't work, the rest will)</p>
+    <h3>What do you choose ?</h3>
+        <form action="install.pl">
+            <input type="hidden" name="step" value="3" />
+            <input type="hidden" name="op" value="Nozebra" />
+            <p><input type="radio" name="NoZebra" value="1" />Nozebra: my catalogue is not that large and I want something simple to setup</p>
+            <p><input type="radio" name="NoZebra" value="0" />Zebra: I have a large catalogue, I'm not afraid having to setup more software on my server</p>
+            <input type="submit" value="Choose" /></form>
+        </form>
+<!-- /TMPL_IF -->
+
+<!-- TMPL_IF name="Nozebra" -->
+    <p>Installation complete.<br />
+        <p>Click on Finish to complete and load the Koha Staff Interface.
+        <form name="finish">
+        <input type="hidden" name="step" value="3" />
+        <input type="hidden" name="op" value="finish" />
+        <input type="submit" value="Finish" /></form>
+        </p>
     </p>
-  </p>
 <!--/TMPL_IF-->
 
 
@@ -159,19 +188,19 @@ function Hide(link) {
         </ul>
         <form action="install.pl">
         <input type="hidden" name="step" value="3" />
-  <p> Click Next to continue <input value="Next &gt;&gt;" type="submit" /></p>
+            <p> Click Next to continue <input value="Next &gt;&gt;" type="submit" /></p>
         </form>
     <!-- /TMPL_IF -->
 <!--/TMPL_IF-->
 
 
 <!--TMPL_IF Name="proposeimport"-->
-  <p>Now we're ready to create the database tables and fill them with some default data.</p>
-  <form action="install.pl">
-  <input type="hidden" name="step" value="3" />
-  <input type="hidden" name="op" value="importdatastructure" />
-  <p> Click Next to continue <input value="Next &gt;&gt;" type="submit" /></p>
-  </form>
+    <p>Now we're ready to create the database tables and fill them with some default data.</p>
+    <form action="install.pl">
+    <input type="hidden" name="step" value="3" />
+    <input type="hidden" name="op" value="importdatastructure" />
+    <p> Click Next to continue <input value="Next &gt;&gt;" type="submit" /></p>
+    </form>
 <!--/TMPL_IF-->
 
 
