add tip to branches for IP feature
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/branches.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/branches.tmpl
@@ -67,7 +67,7 @@
         <p><label>Phone</label><input type="text" name="branchphone" value="<!-- TMPL_VAR name="branchphone" escape="HTML" -->" /></p>
         <p><label>Fax</label><input type="text" name="branchfax" value="<!-- TMPL_VAR name="branchfax" escape="HTML" -->" /></p>
         <p><label>E-mail</label><input type="text" name="branchemail" value="<!-- TMPL_VAR name="branchemail" escape="HTML" -->" /></p>
-        <p><label>Library IP</label><input type="text" name="branchip" value="<!-- TMPL_VAR name="branchip" escape="HTML" -->" /></p>
+        <p><label>IP</label><input type="text" name="branchip" value="<!-- TMPL_VAR name="branchip" escape="HTML" -->" />can be entered as a single IP, or a subnet such as 192.168.1.*</p>
         <p><label>Library Printer</label>
             <select id="branchprinter" name="branchprinter">
                 <option value="">None</option>
