--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_leader_computerfile.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_leader_computerfile.tmpl
@@ -309,8 +309,11 @@
 </form>
 <script>
 function report() {
-		opener.document.f.field_value[<!-- TMPL_VAR name="index" -->].value = 
-			'    '+document.f_pop.f5.value +
+	    var doc   = opener.document; 
+            var field = doc.getElementById("<!-- TMPL_VAR NAME='index'-->");
+        
+            field.value =
+                        '    '+document.f_pop.f5.value +
 			document.f_pop.f6.value+ document.f_pop.f7.value+
 			document.f_pop.f8.value+ document.f_pop.f9.value+ '       '+
 			document.f_pop.f17.value+ document.f_pop.f18.value+ document.f_pop.f19.value+'     ';
