Revert "Adding IndependantBranches Filter + adding some ordering on member list display."
This reverts commit 0dee069f30f05f0d63d3b5e5047cdd3986aa373c.

Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/member.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/member.tmpl
@@ -58,10 +58,9 @@
 <div class="searchresults">
     <table>
     <tr>
-    <th><a href="member.pl?member=<!--TMPL_VAR Name="member" -->&orderby=cardnumber">Card</a></th>
-    <th><a href="member.pl?member=<!--TMPL_VAR Name="member" -->&orderby=surname">Name</a></th>
-    <th><a href="member.pl?member=<!--TMPL_VAR Name="member" -->&orderby=borrowers.categorycode">Cat</a></th>
-    <th><a href="member.pl?member=<!--TMPL_VAR Name="member" -->&orderby=branchcode">Branch</a></th>
+    <th>Card</th>
+    <th>Name</th>
+    <th>Cat</th>
     <th>OD/Issues</th>
     <th>Fines</th>
     <th>Notes</th>
@@ -81,7 +80,6 @@
     <!-- TMPL_VAR NAME="streetaddress" --> <!-- TMPL_VAR NAME="city" -->
     </td>
     <td><!-- TMPL_VAR NAME="category_description" --> (<!-- TMPL_VAR name="category_type" -->)</td>
-    <td><!-- TMPL_VAR NAME="branchcode" --></td>
     <td><!-- TMPL_VAR NAME="odissue" --></td>
     <td><!-- TMPL_VAR NAME="fines" --></td>
     <td><!-- TMPL_VAR NAME="borrowernotes" --></td>
